bench(network): explain the constant factor, and how the work scales
The runtime table said GCFLOBDD is ~5x NDD per conjunction and left it
there. This measures why, and what it costs.

Every backend runs the identical driver, so the operation count is a
property of the data plane, not the engine. `netbench.Anatomy` counts it
through a wrapping `CountingDd` and divides it into the clock, giving a
per-operation cost that compares across engines; `NddBackend` grows the
per-diagram node, edge and label-BDD walks NDD ships no API for, so its
diagrams can be sized alongside the others.

The answer is not diagram size. An NDD predicate carries more
decision-diagram nodes than either the BDD's or GCFLOBDD's and is still
3x faster, because a five-tuple predicate constrains 1.31 of 5 fields on
average and NDD skips the rest instead of re-walking 104 variables. Same
label engine as the baseline row, so the decomposition is the only
variable.

On the GCFLOBDD side an `opcount` feature counts recursive calls, node
and return-map interns on the hot paths; `tests/workprofile.rs` and
`tests/scaling.rs` read them back. One conjunction is 5.7 recursive
calls at ~330 ns each against a BDD's ~28 ns -- fifteen times fewer
steps, twelve times the cost each. That is the representation, not a
tuning defect: there is no shape to share in an address prefix, so the
return-map machinery has nothing to buy.

The scaling section fixes the exponent the engines are multiplying
against. Atomic predicates cost Theta(D^3.3) over D = 20..500 devices
and drifting upward, all of it from the ACLs -- prefixes are a laminar
family and stay linear; five-tuple boxes cut across the nesting. On that
curve NDD's 5x is 1.6x more devices.

BENCHMARKS.md, the CSVs and the figures are a full re-run.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>